Fix: add missing color variables

--- a/src/styles/colors.pcss
+++ b/src/styles/colors.pcss
@@ -56,6 +56,8 @@
   --system-yellow: rgb(var(--rgb-system-yellow));
   --system-red: rgb(var(--rgb-system-red));
   --system-green: rgb(var(--rgb-system-green));
+  --divider-color: rgb(var(--rgb-divider-color));
+  --shadow-color: rgb(var(--rgb-shadow-color));
   --input-background-color: rgb(var(--rgb-body-background-color));
   --landing-background-color: rgb(var(--rgb-landing-background-color));
   --strength-meter-very-strong: rgb(var(--rgb-strength-meter-very-strong));
